--- a/divisi.html
+++ b/divisi.html
@@ -104,10 +104,7 @@
           <div class="divisi-item what-is-hmif">
             <h2>Tugas Divisi HUMAS</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
-              suscipit esse, eos sequi dolor aliquid similique mollitia
-              repudiandae atque aliquam ratione animi dolorem eum id commodi
-              dolorum eius provident tempora.
+              - Komunikasi Teknis, Menyampaikan informasi terkait kegiatan organisasi baik secara verbal, tulisan dan yang lainnya.<br>- Memfasilitasi komunikasi, sebagai jembatan pihak internal dengan pihak eksternal organisasi, baik saat menyampaikan informasi dari luar ke dalam ataupun sebaliknya.<br>- Membantu mencari solusi, jalur komunikasi menjadi cara yang efektif untuk penyelesaian masalah. Di sebuah organisasi, humas bertugas mencari solusinya dapat berdasarkan dengan pengalaman, pengetahuan atau mencari informasi dari pihak lain.
             </p>
           </div>
         </div>
@@ -116,39 +113,30 @@
         <h2>Program Kerja</h2>
         <div class="program-wrapper">
           <div class="program-item left">
-            <div class="program-title">1. Pelatihan</div>
+            <div class="program-title">1. Sosialisasi</div>
             <div class="program-desc">
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
-                esse possimus pariatur totam dolore sapiente illo laborum
-                aliquam ab explicabo quos, eum placeat velit doloribus. Tenetur
-                nulla unde maxime non.
+                Konsolidasi sosialisasi gadget di tempat atau daerah pedesaan yang kurang mengetahui mengenai teknologi dan pemeriksaan kesehatan bagi segala usia (PKM)
               </p>
             </div>
           </div>
         </div>
         <div class="program-wrapper">
           <div class="program-item left">
-            <div class="program-title">2. Komunitas</div>
+            <div class="program-title">2. Kelompok Belajar</div>
             <div class="program-desc">
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
-                esse possimus pariatur totam dolore sapiente illo laborum
-                aliquam ab explicabo quos, eum placeat velit doloribus. Tenetur
-                nulla unde maxime non.
+                Pengadaan kelompok belajar untuk mahasiswa Teknologi Informasi baik seputar materi pembelajaran yang berada di kampus maupun diluar pembelajaran materi kampus.
               </p>
             </div>
           </div>
         </div>
         <div class="program-wrapper">
           <div class="program-item left">
-            <div class="program-title">3. Sosialisasi</div>
+            <div class="program-title">3. Bootcamp</div>
             <div class="program-desc">
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
-                esse possimus pariatur totam dolore sapiente illo laborum
-                aliquam ab explicabo quos, eum placeat velit doloribus. Tenetur
-                nulla unde maxime non.
+                 Menyelenggarakan Bootcamp bagi mahasiswa baru Teknologi Informasi yang bersertifikasi.
               </p>
             </div>
           </div>
