--- a/divisi.html
+++ b/divisi.html
@@ -146,7 +146,7 @@
       <section class="org-structure container">
         <h2>
           Anggota Divisi<span class="br">Hubungan Masyarakat</span>
-          <span class="br">HIMATIF 2023</span>
+          <span class="br"></span>
         </h2>
         <div class="org-structure-wrapper">
           <div class="structure-card">
@@ -243,7 +243,7 @@
       <section class="org-structure container">
         <h2>
           Anggota Divisi<span class="br">Penelitian Dan Pengembangan</span>
-          <span class="br">HIMATIF 2023</span>
+          <span class="br"></span>
         </h2>
         <div class="org-structure-wrapper">
           <div class="structure-card">
@@ -288,10 +288,7 @@
           <div class="divisi-item what-is-hmif">
             <h2>Tugas Divisi MEDIF</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
-              suscipit esse, eos sequi dolor aliquid similique mollitia
-              repudiandae atque aliquam ratione animi dolorem eum id commodi
-              dolorum eius provident tempora.
+              - Membuat podcast mengenai teknologi informasi di youtube<br>- Membuat album foto kegiatan Himatif<br>- Memasang foto terbaru para pengurus di instagram
             </p>
           </div>
         </div>
@@ -300,39 +297,40 @@
         <h2>Program Kerja</h2>
         <div class="program-wrapper">
           <div class="program-item left">
-            <div class="program-title">1. ?????</div>
+            <div class="program-title">1. Kordinasi dan Komunikasi</div>
             <div class="program-desc">
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
-                esse possimus pariatur totam dolore sapiente illo laborum
-                aliquam ab explicabo quos, eum placeat velit doloribus. Tenetur
-                nulla unde maxime non.
+Mengkoordinasikan dan mengkomunikasikan yang berkaitan dengan kebijakan dan seluruh program kerja serta kegiatan-kegiatan yang berhubungan dengan divisi media, komunikasi dan informasi kepada ketua umum dan wakil ketua umum melalui kepala departemen.
               </p>
             </div>
           </div>
         </div>
         <div class="program-wrapper">
           <div class="program-item left">
-            <div class="program-title">2. ???????</div>
+            <div class="program-title">2. Membentuk media komunikasi meliputi :</div>
             <div class="program-desc">
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
-                esse possimus pariatur totam dolore sapiente illo laborum
-                aliquam ab explicabo quos, eum placeat velit doloribus. Tenetur
-                nulla unde maxime non.
+                   1. Instagram<br>2. Youtube
               </p>
             </div>
           </div>
         </div>
         <div class="program-wrapper">
           <div class="program-item left">
-            <div class="program-title">3. ?????</div>
+            <div class="program-title">3. Informasi terupdate seputar HIMATIF</div>
             <div class="program-desc">
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
-                esse possimus pariatur totam dolore sapiente illo laborum
-                aliquam ab explicabo quos, eum placeat velit doloribus. Tenetur
-                nulla unde maxime non.
+                Mempublikasikan informasi update seputar HIMATIF secara cepat dan tepat di media sosial.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="program-wrapper">
+          <div class="program-item left">
+            <div class="program-title">4. Siaran Podcast</div>
+            <div class="program-desc">
+              <p>
+                Merupakan siaran suara  untuk masyarakat umum dan terkhususkan juga untuk kalangan Teknik informasi yang diadakan hampir di setiap bulan dengan mengusung tema yang berbeda, dengan menyampaikan konten terkini sebagai media informasi dan hiburan juga konten terkait informasi terbaru mengenai Teknik informasi UNTARA untuk membangun branding Departemen Medinfo serta HIMATIF UNTARA di khalayak umum.
               </p>
             </div>
           </div>
@@ -340,7 +338,7 @@
       </section>
       <div class="anchor" id="structure-organ"></div>
       <section class="org-structure container">
-        <h2>Anggota Divisi <span class="br">Media Informasi</span>HIMATIF 2023</h2>
+        <h2>Anggota Divisi <span class="br">Media Informasi</span></h2>
         <div class="org-structure-wrapper">
           <div class="structure-card">
             <img src="assets/Tedy.png" alt="" />
@@ -383,16 +381,16 @@
       <section class="divisi container" id="divisi-kesek">
         <div class="divisi-left">
           <img src="assets/all-himatif.jpg" alt="Divisi Kesekretariatan 2022" />
-          <p>Badan Pengawas Organisasi 2023</p>
+          <p>Dewan Pengawas Organisasi</p>
         </div>
         <div class="divisi-right">
           <div class="divisi-item what-is-hmif">
-            <h2>Tugas BPO</h2>
+            <h2>Tugas DPO</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
-              suscipit esse, eos sequi dolor aliquid similique mollitia
-              repudiandae atque aliquam ratione animi dolorem eum id commodi
-              dolorum eius provident tempora.
+              - Melakukan pengawasan terhadap pelaksanaan AD/ART, proker, dan kinerja himpunan;<br>- Menyerap, menghimpun, dan menindaklanjuti aspirasi dari anggota himpunan baik 
+aktif maupun pasif;<br>- Membahas dan menindaklanjuti hasil pengawasan yang telah dilakukan;<br>- Memberikan pertimbangan kepada ketua, wakil ketua, pengurus harian, Ketua Divisi, 
+dalam hal pengambilan keputusan dan penyelesaian masalah;<br>- Memberikan pertimbangan kepada Ketua Himpunan dan Wakil Ketua Himpunan
+dalam pemilihan pengurus HIMATIF;
             </p>
           </div>
         </div>
@@ -400,15 +398,14 @@
       <div class="anchor" id="structure-kesek"></div>
       <section class="org-structure container">
         <h2>
-          <span class="br">Badan Pengawas Organisasi</span>HIMATIF 2023
-        </h2>
+          <span class="br">Dewan Pengawas Organisasi</span></h2>
         <div class="org-structure-wrapper">
           <div class="structure-card">
             <img src="assets/vector pria.jpg" alt="" />
             <h3>Muhamad Yunus Mubarok</h3>
           </div>
           <div class="structure-card">
-            <img src="assets/vector pria.jpg" alt="" />
+            <img src="assets/Martin.png" alt="" />
             <h3>Martin Setya Endra W.</h3>
           </div>
       </section>
