--- a/index.html
+++ b/index.html
@@ -243,11 +243,11 @@
               eksternal.
             </li>
             <li>
-              mengadakan suatu kegiatan bersama mahasiswa/i Teknik Infromasi
+              Mengadakan suatu kegiatan bersama mahasiswa/i Teknik Infromasi
               untuk menyalurkanaspirasi serta menampung kreativitas mahasiswa/i.
             </li>
             <li>
-              menjunjung tinggi sikap tolereansi, saling menghormati satu sama
+              Menjunjung tinggi sikap tolereansi, saling menghormati satu sama
               lain dan tetap mengedepankan kebhinekaan antar mahasiswa/i maupun
               masyarakat.
             </li>
@@ -259,22 +259,16 @@
           </div>
           <ul class="value-tujuan">
             <li>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam vel
-              aperiam sequi doloremque voluptate mollitia nulla, aliquid
-              inventore? Repellendus, id distinctio facilis quaerat quas tempore
-              magni doloremque. Nihil, voluptatibus qui.
+              Mengembangkan keterampilan, pengetahuan, dan perilaku anggota HIMATIF dalam bidang Teknik Informasi dan keorganisasian.
             </li>
             <li>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit,
-              voluptates aliquam esse ad, doloribus distinctio sapiente facere
-              accusantium libero, dicta inventore iure dignissimos doloremque
-              vero eligendi. Alias vitae dolorem at!
+              Berperan aktif untuk memajukan jurusan Teknik Informasi Untara dalam mencapai visi dan misinya.
             </li>
             <li>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
-              excepturi possimus nemo perferendis eveniet eum saepe esse error.
-              Quaerat voluptatem nulla dolor id vero molestiae ipsa cupiditate
-              autem officiis quidem.
+              Menciptakan ikatan persaudaraan yang kuat antar anggota Jurusan Teknik Informasi Untara.
+            </li>
+            <li>
+              Sebagai wadah kaderisasi berjenjang yang bersifat pra dasar.
             </li>
           </ul>
         </div>
@@ -303,7 +297,7 @@
             <p>Sekretaris 1</p>
           </div>
           <div class="structure-card structure-card-co">
-            <img src="assets/vector wanita.jpg" alt="" />
+            <img src="assets/Cipa.png" alt="" />
             <h3>Syifa Khaerunisa</h3>
             <p>Sekretaris 2</p>
           </div>
@@ -347,18 +341,13 @@
       </div>
       <div class="org-structure-item"onclick="location='divisi.html#divisi-pemda'"
           >
-        <div class="title">Badan Pengawas Organisasi HIMATIF</div>
+        <div class="title">Dewan Pengawas Organisasi</div>
         <div class="org-structure-wrapper">
           <div
             class="structure-card structure-card-co"onclick="location='divisi.html#divisi-pemda'"
           >
             <img src="assets/vector pria.jpg" alt="" />
-            <h3>Muhamad Yunus Mubarok</h3>
-          </div>
-          <div
-            class="structure-card structure-card-co">
-            <img src="assets/vector pria.jpg" alt="" />
-            <h3>Martin Setya Endra W.</h3>
+            <h3>DPO HIMATIF</h3>
           </div>
       </div>
     </section>
