--- a/civitas.html
+++ b/civitas.html
@@ -75,6 +75,14 @@
             <p>Dekan Fakultas Teknik</p>
           </div>
         </div>
+        <div class="org-structure-item">
+        <div class="org-structure-wrapper">
+          <div class="structure-card structure-card-division">
+            <img src="civitas/1.Saryani.,S.Kom.,MTI.png" alt="" />
+            <h3>Saryani, S.Kom.,M.TI</h3>
+            <p>Kaprodi Teknologi Informasi</p>
+          </div>
+        </div>
         <div class="org-structure-wrapper">
           <div class="structure-card structure-card-co">
             <img src="assets/vector wanita.jpg" alt="" />
@@ -91,10 +99,6 @@
       <div class="org-structure-item">
         <div class="title">Dosen Tetap UNTARA</div>
         <div class="org-structure-wrapper">
-          <div class="structure-card structure-card-division">
-            <img src="civitas/1.Saryani.,S.Kom.,MTI.png" alt="" />
-            <h3>Saryani, S.Kom.,M.TI</h3>
-          </div>
           <div class="structure-card structure-card-division">
             <img src="civitas/2.R Wahyudi.,ST.,M.Kom.png" alt="" />
             <h3>R. Wahyudi, S.T.,M.Kom</h3>
