--- a/civitas.html
+++ b/civitas.html
@@ -78,7 +78,7 @@
         <div class="org-structure-item">
         <div class="org-structure-wrapper">
           <div class="structure-card structure-card-division">
-            <img src="civitas/1.Saryani.,S.Kom.,MTI.png" alt="" />
+            <img style="border-radius: 5px;" src="civitas/1.Saryani.,S.Kom.,MTI.png" alt="" />
             <h3>Saryani, S.Kom.,M.TI</h3>
             <p>Kaprodi Teknologi Informasi</p>
           </div>
@@ -100,7 +100,7 @@
         <div class="title">Dosen Tetap UNTARA</div>
         <div class="org-structure-wrapper">
           <div class="structure-card structure-card-division">
-            <img src="civitas/2.R Wahyudi.,ST.,M.Kom.png" alt="" />
+            <img style="border-radius: 5px;" src="civitas/2.R Wahyudi.,ST.,M.Kom.png" alt="" />
             <h3>R. Wahyudi, S.T.,M.Kom</h3>
           </div>
           <div class="structure-card structure-card-division">
@@ -110,11 +110,11 @@
         </div>
         <div class="org-structure-wrapper">
           <div class="structure-card structure-card-division">
-            <img src="civitas/5. Septa Febriyansyah.,S.M.,S.Kom.,M.Kom.png" alt="" />
+            <img style="border-radius: 5px;" src="civitas/5. Septa Febriyansyah.,S.M.,S.Kom.,M.Kom.png" alt="" />
             <h3>Septa Febriansyah, S.M.,S.Kom.,M.Kom</h3>
           </div>
           <div class="structure-card structure-card-division">
-            <img src="civitas/6. Fabio Junior.,S.Kom.,M.Kom.png" alt="" />
+            <img style="border-radius: 5px;" src="civitas/6. Fabio Junior.,S.Kom.,M.Kom.png" alt="" />
             <h3>Fabio Junior, S.Kom.,M.Kom</h3>
           </div>
           <div class="structure-card structure-card-division">
@@ -124,11 +124,11 @@
         </div>
         <div class="org-structure-wrapper">
           <div class="structure-card structure-card-division">
-            <img src="civitas/8. Irawan.,S.Kom.,M.Kom.png" alt="" />
+            <img style="border-radius: 5px;" src="civitas/8. Irawan.,S.Kom.,M.Kom.png" alt="" />
             <h3>Irawan, S.Kom.,M.Kom</h3>
           </div>
           <div class="structure-card structure-card-division">
-            <img src="civitas/3.Rika Nurhidayah.,S.Kom.,MM.png" alt="" />
+            <img style="border-radius: 5px;" src="civitas/3.Rika Nurhidayah.,S.Kom.,MM.png" alt="" />
             <h3>Rika Nurhidayah, S.Kom.,M.Kom</h3>
           </div>
         </div>
