--- a/divisi.html
+++ b/divisi.html
@@ -89,7 +89,7 @@
         id="btn-kesek"
         onclick="changeDivisionFilter('kesek')"
       >
-        BPO
+        DPO
       </button>
     </section>
 
@@ -116,7 +116,7 @@
             <div class="program-title">1. Sosialisasi</div>
             <div class="program-desc">
               <p>
-                Konsolidasi sosialisasi gadget di tempat atau daerah pedesaan yang kurang mengetahui mengenai teknologi dan pemeriksaan kesehatan bagi segala usia (PKM)
+                Sosialisasi gadget di tempat atau daerah pedesaan yang kurang mengetahui mengenai teknologi dan pemeriksaan kesehatan bagi segala usia (PKM)
               </p>
             </div>
           </div>
@@ -210,7 +210,7 @@
         <h2>Program Kerja</h2>
         <div class="program-wrapper">
           <div class="program-item left">
-            <div class="program-title">1. Mengadakan Workshop/Seminar</div>
+            <div class="program-title">1. Workshop/Seminar</div>
             <div class="program-desc">
               <p>
                 Mengadakan sebuah acara besar(formal) untuk berfokus meningkatkan pengetahuan atau praktik dari mahasiswa Teknologi Informasi
@@ -220,7 +220,7 @@
         </div>
         <div class="program-wrapper">
           <div class="program-item left">
-            <div class="program-title">2. Membuat Website HIMATIF UNTARA</div>
+            <div class="program-title">2. Website HIMATIF UNTARA</div>
             <div class="program-desc">
               <p>
                 Membuat sebuah website untuk himpunan mahasiswa teknologi informasi dan melakukan perawatan untuk dijadikan sebagai salah satu tempat informasi Himpunan dan juga sebagai tanda pengenal himpunan
@@ -230,7 +230,7 @@
         </div>
         <div class="program-wrapper">
           <div class="program-item left">
-            <div class="program-title">3. Mengadakan kelas belajar</div>
+            <div class="program-title">3. Kelas belajar</div>
             <div class="program-desc">
               <p>
                 Acara kecil(tidak formal) yang diadakan beberapa orang yang berfokus pada satu materi untuk saling bertukar informasi dari mahasiswa ke mahasiswa
