Kapital belajar ke Belajar

--- a/divisi.html
+++ b/divisi.html
@@ -230,7 +230,7 @@
         </div>
         <div class="program-wrapper">
           <div class="program-item left">
-            <div class="program-title">3. Kelas belajar</div>
+            <div class="program-title">3. Kelas Belajar</div>
             <div class="program-desc">
               <p>
                 Acara kecil(tidak formal) yang diadakan beberapa orang yang berfokus pada satu materi untuk saling bertukar informasi dari mahasiswa ke mahasiswa
