Memperbaiki huruf kapital pada judul proker

--- a/divisi.html
+++ b/divisi.html
@@ -116,7 +116,7 @@
             <div class="program-title">1. Sosialisasi</div>
             <div class="program-desc">
               <p>
-                Sosialisasi gadget di tempat atau daerah pedesaan yang kurang mengetahui mengenai teknologi dan pemeriksaan kesehatan bagi segala usia (PKM)
+                Sosialisasi gadget di tempat atau daerah pedesaan yang kurang mengetahui mengenai teknologi dan pemeriksaan kesehatan bagi segala usia (PKM).
               </p>
             </div>
           </div>
@@ -307,7 +307,7 @@ Mengkoordinasikan dan mengkomunikasikan yang berkaitan dengan kebijakan dan selu
         </div>
         <div class="program-wrapper">
           <div class="program-item left">
-            <div class="program-title">2. Membentuk media komunikasi meliputi :</div>
+            <div class="program-title">2. Membentuk Media Komunikasi Meliputi :</div>
             <div class="program-desc">
               <p>
                    1. Instagram<br>2. Youtube
@@ -317,7 +317,7 @@ Mengkoordinasikan dan mengkomunikasikan yang berkaitan dengan kebijakan dan selu
         </div>
         <div class="program-wrapper">
           <div class="program-item left">
-            <div class="program-title">3. Informasi terupdate seputar HIMATIF</div>
+            <div class="program-title">3. Informasi Terupdate Seputar HIMATIF</div>
             <div class="program-desc">
               <p>
                 Mempublikasikan informasi update seputar HIMATIF secara cepat dan tepat di media sosial.
