Tambah sedikit kata

--- a/divisi.html
+++ b/divisi.html
@@ -233,7 +233,7 @@
             <div class="program-title">3. Kelas Belajar Pengurus</div>
             <div class="program-desc">
               <p>
-                Kerja sama antara divisi HUMAS dan LITBANG dalam meningkatkan pengetahuan mengenai materi kampus atau diluar kampus untuk para pengurus.
+                Kerja sama antara divisi HUMAS dan LITBANG dalam meningkatkan pengetahuan mengenai materi kampus ataupun diluar kampus untuk para pengurus.
               </p>
             </div>
           </div>
