--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <section class="intro container" id="intro">
       <div class="intro-left">
         <img style="border-radius: 5px;" src="assets/all-himatif.jpg" alt="Pengurus HIMATIF 2023" />
-        <p>Pengurus HIMATIF 2023</p>
+        <p>Pengurus HIMATIF Periode 2023 - 2024</p>
       </div>
       <div class="intro-right">
         <div class="intro-item what-is-hmif">
