Nama dan poto dosen

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ Mahasiswa Fakultas Teknik.<br><br><b>HIMATIF</b> adalah organisasi kemahasiswaan
       </div>
     </section>
     <section class="org-structure container" id="org-structure">
-      <h2>Struktur Organisasi <span class="br">HIMATIF 2023</span></h2>
+      <h2>Struktur Organisasi HIMATIF</h2>
       <div class="org-structure-item">
         <div class="title">Badan Pelaksana Harian</div>
         <div class="org-structure-wrapper">
