--- a/divisi.html
+++ b/divisi.html
@@ -97,7 +97,7 @@
     <div id="pemda">
       <section class="divisi container" id="divisi-pemda">
         <div class="divisi-left">
-          <img src="assets/Divisi Humas 2023.png" alt="Divisi Pemda 2022" />
+          <img src="assets/humas.PNG" alt="Divisi Pemda 2022" />
           <p>Divisi Hubungan Masyarakat 2023</p>
         </div>
         <div class="divisi-right">
@@ -177,7 +177,7 @@
             <p>Anggota<br />(Divisi HUMAS)</p>
           </div>
           <div class="structure-card">
-            <img src="assets/vector wanita.jpg" alt="" />
+            <img src="assets/Gisna.png" alt="" />
             <h3>Isatirrodiah Safitri A.</h3>
             <p>Anggota<br />(Divisi HUMAS)</p>
           </div>
@@ -194,7 +194,7 @@
     <div class="hide" id="advo">
       <section class="divisi container" id="divisi-advo">
         <div class="divisi-left">
-          <img src="assets/1.) Divisi Litbang 2023.png" alt="Divisi Advokasi 2022" />
+          <img src="assets/1.) Di.v. Litbang.png" alt="Divisi Advokasi 2022" />
           <p>Divisi Penelitian Dan Pengembangan 2023</p>
         </div>
         <div class="divisi-right">
@@ -380,7 +380,7 @@ Mengkoordinasikan dan mengkomunikasikan yang berkaitan dengan kebijakan dan selu
     <div class="hide" id="kesek">
       <section class="divisi container" id="divisi-kesek">
         <div class="divisi-left">
-          <img src="assets/all-himatif.jpg" alt="Divisi Kesekretariatan 2022" />
+          <img src="assets/DPO.png" alt="Divisi Kesekretariatan 2022" />
           <p>Dewan Pengawas Organisasi</p>
         </div>
         <div class="divisi-right">
@@ -401,7 +401,7 @@ dalam pemilihan pengurus HIMATIF;
           <span class="br">Dewan Pengawas Organisasi</span></h2>
         <div class="org-structure-wrapper">
           <div class="structure-card">
-            <img src="assets/vector pria.jpg" alt="" />
+            <img src="assets/yunus.jpg" alt="" />
             <h3>Muhamad Yunus Mubarok</h3>
           </div>
           <div class="structure-card">
