--- a/index.html
+++ b/index.html
@@ -305,14 +305,14 @@ Mahasiswa Fakultas Teknik.<br><br><b>HIMATIF</b> adalah organisasi kemahasiswaan
             class="structure-card structure-card-division"
             onclick="location='divisi.html#divisi-pemda'"
           >
-            <img src="assets/Divisi Humas 2023.png" alt="" />
+            <img src="assets/humas.PNG" alt="" />
             <h3>Divisi<br />Hubungan Masyarakat</h3>
           </div>
           <div
             class="structure-card structure-card-division"
             onclick="location='divisi.html#divisi-pemda'"
           >
-            <img src="assets/1.) Divisi Litbang 2023.png" alt="" />
+            <img src="assets/1.) Di.v. Litbang.png" alt="" />
             <h3>Divisi<br />Penelitian Dan Pengembangan</h3>
           </div>
           <div
@@ -331,7 +331,7 @@ Mahasiswa Fakultas Teknik.<br><br><b>HIMATIF</b> adalah organisasi kemahasiswaan
           <div
             class="structure-card structure-card-co"onclick="location='divisi.html#divisi-pemda'"
           >
-            <img src="assets/vector pria.jpg" alt="" />
+            <img src="assets/DPO.png" alt="" />
             <h3>DPO HIMATIF</h3>
           </div>
       </div>
