--- a/civitas.html
+++ b/civitas.html
@@ -103,7 +103,7 @@
             <h3>R. Wahyudi, S.T.,M.Kom</h3>
           </div>
           <div class="structure-card structure-card-division">
-            <img style="border-radius: 5px;" src="civitas/pak_bambang.jpg" alt="" />
+            <img style="border-radius: 5px;" src="civitas/bambang.jpeg" alt="" />
             <h3>Bambang Libriantoro, S.Kom.,M.Kom</h3>
           </div>
         </div>
