tambah kata pengurus di tugas divisi litbang

--- a/divisi.html
+++ b/divisi.html
@@ -201,7 +201,7 @@
           <div class="divisi-item what-is-hmif">
             <h2>Tugas Divisi LITBANG</h2>
             <p>
-              Salah satu divisi didalam himpunan teknologi informasi Universitas Tangerang Raya yang bertujuan untuk membuat acara workshop/seminar, membuat website himatif untara dan kelas belajar.
+              Salah satu divisi didalam himpunan teknologi informasi Universitas Tangerang Raya yang bertujuan untuk membuat acara workshop/seminar, membuat website himatif untara dan kelas belajar pengurus.
             </p>
           </div>
         </div>
