Penambahan nama lengkap pengurus

--- a/divisi.html
+++ b/divisi.html
@@ -161,7 +161,7 @@
           </div>
           <div class="structure-card">
             <img src="assets/Agung P.png" alt="" />
-            <h3>M. Agung Permana</h3>
+            <h3>Muhammad Agung Permana</h3>
             <p>Anggota<br />(Divisi HUMAS)</p>
           </div>
         </div>
@@ -178,7 +178,7 @@
           </div>
           <div class="structure-card">
             <img src="assets/Gisna.png" alt="" />
-            <h3>Isatirrodiah Safitri A.</h3>
+            <h3>Isatirrodiah Safitri Anggisna</h3>
             <p>Anggota<br />(Divisi HUMAS)</p>
           </div>
           <div class="structure-card">
