--- a/divisi.html
+++ b/divisi.html
@@ -405,8 +405,8 @@ dalam pemilihan pengurus HIMATIF;
             <h3>Muhamad Yunus Mubarok</h3>
           </div>
           <div class="structure-card">
-            <img src="assets/Martin.png" alt="" />
-            <h3>Martin Setya Endra W.</h3>
+            <img src="assets/martin.png" alt="" />
+            <h3>Martin Setya Endra Wibawa</h3>
           </div>
       </section>
     </div>
