typo dan salah satu poto pengurus

--- a/divisi.html
+++ b/divisi.html
@@ -257,7 +257,7 @@
             <p>Anggota<br />(Anggota LITBANG)</p>
           </div>
           <div class="structure-card">
-            <img src="assets/Nanda.png" alt="" />
+            <img src="assets/ananda.png" alt="" />
             <h3>Ananda Nur Syaputra</h3>
             <p>Anggota<br />(Anggota LITBANG)</p>
           </div>
