--- a/index.html
+++ b/index.html
@@ -211,10 +211,10 @@ Mahasiswa Fakultas Teknik.<br><br><b>HIMATIF</b> adalah organisasi kemahasiswaan
             <h2>Visi</h2>
           </div>
           <div class="visi">
-            Tewujudnya Organisasi HIMATIF UNTARA yang menciptakan lingkungan
+            Terwujudnya Organisasi HIMATIF UNTARA yang menciptakan lingkungan
             yang terorganisir dan terdidik serta juga aktif didalam kampus
             maupun diluar kampus sehingga penerapan pengabdian kepada masyarakat
-            dapat dijalaonkan secara baik.
+            dapat dijalankan secara baik.
           </div>
         </div>
         <div class="misi-item">
