poto semua pengurus himatif

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </div>
     <section class="intro container" id="intro">
       <div class="intro-left">
-        <img style="border-radius: 5px;" src="assets/all-himatif.jpg" alt="Pengurus HIMATIF 2023" />
+        <img src="pengurus/himatif_2023_2024.png" alt="Pengurus HIMATIF 2023" />
         <p>Pengurus HIMATIF Periode 2023 - 2024</p>
       </div>
       <div class="intro-right">
