rapihin file dan satu pengurus pindah divisi

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ Mahasiswa Fakultas Teknik.<br><br><b>HIMATIF</b> adalah organisasi kemahasiswaan
             <div class="periode">2023-2024</div>
             <div
               class="image"
-              style="background-image: url('assets/Zidane\ Baihaqi.png')"
+              style="background-image: url('pengurus/bph/zidane_baihaqi.png')"
             ></div>
             <div class="info">
               <p class="name">Zidane Baihaqi</p>
@@ -265,34 +265,34 @@ Mahasiswa Fakultas Teknik.<br><br><b>HIMATIF</b> adalah organisasi kemahasiswaan
         <div class="title">Badan Pelaksana Harian</div>
         <div class="org-structure-wrapper">
           <div class="structure-card">
-            <img src="assets/Zidane Baihaqi.png" alt="" />
+            <img src="pengurus/bph/zidane_baihaqi.png" alt="" />
             <h3>Zidane Baihaqi</h3>
             <p>Ketua Umum</p>
           </div>
           <div class="structure-card">
-            <img src="assets/Vier.png" alt="" />
+            <img src="pengurus/bph/ramadhan_alfi_vieri.png" alt="" />
             <h3>Ramadhan Alfi Vieri</h3>
             <p>Wakil Ketua Umum</p>
           </div>
         </div>
         <div class="org-structure-wrapper">
           <div class="structure-card structure-card-co">
-            <img src="assets/Dany A.png" alt="" />
+            <img src="pengurus/bph/dany_kurniawan.png" alt="" />
             <h3>Dany Kurniawan</h3>
             <p>Sekretaris 1</p>
           </div>
           <div class="structure-card structure-card-co">
-            <img src="assets/Cipa.png" alt="" />
+            <img src="pengurus/bph/syifa_khaerunnisa.png" alt="" />
             <h3>Syifa Khaerunnisa</h3>
             <p>Sekretaris 2</p>
           </div>
           <div class="structure-card structure-card-co">
-            <img src="assets/Febi A.png" alt="" />
+            <img src="pengurus/bph/febi_anjelina_permatasari.png" alt="" />
             <h3>Febi Anjelina Permatasari</h3>
             <p>Bendahara 1</p>
           </div>
           <div class="structure-card structure-card-co">
-            <img src="assets/Putri Ayu.png" alt="" />
+            <img src="pengurus/bph/putri_ayu_septina.png" alt="" />
             <h3>Putri Ayu Septina</h3>
             <p>Bendahara 2</p>
           </div>
