--- a/divisi.html
+++ b/divisi.html
@@ -350,11 +350,6 @@ Mengkoordinasikan dan mengkomunikasikan yang berkaitan dengan kebijakan dan selu
             <h3>Graciela Christy Nunuela</h3>
             <p>Anggota<br />(Divisi Medif)</p>
           </div>
-          <div class="structure-card">
-            <img src="assets/Rahma.png" alt="" />
-            <h3>Aulia Rahma Dewy</h3>
-            <p>Anggota<br />(Divisi MEDIF)</p>
-          </div>
         </div>
         <div class="org-structure-wrapper">
           <div class="structure-card">
@@ -401,12 +396,16 @@ dalam pemilihan pengurus HIMATIF;
           <span class="br">Dewan Pengawas Organisasi</span></h2>
         <div class="org-structure-wrapper">
           <div class="structure-card">
-            <img src="assets/yunus.jpg" alt="" />
+            <img src="pengurus/bpo/muhamad_yunus_mubarok.jpg" alt="" />
             <h3>Muhamad Yunus Mubarok</h3>
           </div>
           <div class="structure-card">
-            <img src="assets/martin.png" alt="" />
+            <img src="pengurus/bpo/martin_setya_endra_wibawa.png" alt="" />
             <h3>Martin Setya Endra Wibawa</h3>
+          </div>
+          <div class="structure-card">
+            <img src="pengurus/bpo/aulia_rahma_dewy.png" alt="" />
+            <h3>Aulia Rahma Dewy</h3>
           </div>
       </section>
     </div>
