--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@ Mahasiswa Fakultas Teknik.<br><br><b>HIMATIF</b> adalah organisasi kemahasiswaan
             class="structure-card structure-card-division"
             onclick="location='divisi.html#divisi-pemda'"
           >
-            <img src="assets/3.) Divisi Medif 2023.jpg" alt="" />
+            <img src="pengurus/poto_bersama/Divisi_Medif.png" alt="" />
             <h3>Divisi<br />Media Informasi</h3>
           </div>
         </div>
