--- a/divisi.html
+++ b/divisi.html
@@ -350,6 +350,11 @@ Mengkoordinasikan dan mengkomunikasikan yang berkaitan dengan kebijakan dan selu
             <h3>Graciela Christy Nunuela</h3>
             <p>Anggota<br />(Divisi Medif)</p>
           </div>
+          <div class="structure-card">
+            <img src="pengurus/medif/Ridwan.png" alt="" />
+            <h3>Ridwan Sulistiyanto</h3>
+            <p>Anggota<br />(Divisi Medif)</p>
+          </div>
         </div>
         <div class="org-structure-wrapper">
           <div class="structure-card">
